# Paleobiology-Evolution

./: .gitignore  README.md
.github/workflows/: publish-website.yml
Practicals/Diversity_partitioning/: Diversity_partitioning.qmd
Practicals/Geometric_morphometrics/: GM_instructions.qmd  Geometric_morphometrics.Rproj
Practicals/Global_diversity/: Instructions.qmd  Instructions_Python.qmd  Instructions_R.docx  Instructions_R.qmd  PBDB_practical_plants.Rproj  Pteridophyta_occurrences.csv  pbdb_data.csv  pyproject.toml
Practicals/Phylogenetic_tree/: Phylogenetic_tree.Rproj  Tree_reconstruction.qmd
Practicals/Phylogenetic_tree/data/: character_matrix.csv  echinoids.nex
webpage/: README.md  _quarto.yml  index.qmd  styles.css
webpage/_freeze/practicals/geometric_morphometrics/execute-results/: docx.json
webpage/practicals/: diversity_partitioning.qmd  geometric_morphometrics.qmd  global_diversity_python.qmd  global_diversity_r.qmd  phylogenetic_tree.qmd
webpage/practicals/data/: character_matrix_empty.csv
