[tool.poetry]
name = "global-diversity"
version = "0.1.0"
description = "Practical in using Paleobiology Database"
authors = ["Emilia Jarochowska <e.b.jarochowska@uu.nl>"]
readme = "README.md"
packages = [{include = "global_diversity"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
